[package]
name = "inmemory-sqlite"
version = "0.1.1"
authors = ["A. L. <zlnpgtdtfezf@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple Sync + Clone in memory sqlite connection for rusqlite"
homepage = "https://github.com/zlnpgtdtfezf/inmemory-sqlite"
documentation = "https://docs.rs/inmemory-sqlite"
repository = "https://github.com/zlnpgtdtfezf/inmemory-sqlite"
keywords = ["sql","database","memory","rusqlite"]

[dependencies]
rusqlite = "0.21"
thread_local = "1.0"
threadbound = "0.1"